--- a/style/style.css
+++ b/style/style.css
@@ -15,10 +15,10 @@ body {
     min-height: 30px;
 }
 
-.answer:nth-child(odd){
+.answer:nth-child(odd) {
     margin-right: 10%;
     width: 40%;
-    float:left;
+    float: left;
 }
 
 .answer:nth-child(even) {
@@ -26,9 +26,15 @@ body {
     float: right;
 }
 
-.answer>button {
+.answer > button {
     background-color: red;
     width: 100%;
     height: 50px;
     border-radius: 45px;
+}
+
+.jumbotron {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
